# jobviz

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  app.js  data.json  findings.md  gemini.md  index.html  progress.md  pyproject.toml  styles.css  task_plan.md
.github/workflows/: deploy.yml
site/: CLAUDE.md  app.js  styles.css
src/: CLAUDE.md  build_site_data.py  download_html.py  scrape_details.py  scrape_occupations.py
