[project]
name = "jobviz"
version = "0.1.0"
description = "US Job Market Visualizer - Interactive treemap of BLS Occupational Outlook Handbook data"
authors = [
    {name = "JobViz"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.48.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "markdownify>=0.13.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "lxml>=5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobviz"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
